# Agri-Iot

./: .env.example  .gitignore  AGENTS.md  API-INTEGRATION-PLAN.md  ARCHITECTURE-AI-DECISION.md  AUTOMATION_PLAN.md  Cargo.toml  README.md  和风天气API.md  数字孪生.md
.github/workflows/: build-esp32.yml
agri-core/: Cargo.toml
agri-core/migrations/: 001_init.sql  001_init.sql~bab0449 (refactor: 设备模型重构(capabilities)、ESP32 v2.0 HTTP+Funnel、前端迁移至 React)  002_ai_knowledge.sql  003_dedup.sql  004_boot_id.sql  005_fix_dedup_index.sql  006_entity_relations.sql  007_decision_engine.sql  008_embedding.sql  009_farm_operations.sql  010_readings_indexes.sql  011_anomaly_events.sql
agri-core/src/: adaptor.rs  db.rs  error.rs  lib.rs  models.rs  telemetry.rs  topics.rs
agri-core/src/ai/: assess.rs  calibration.rs  embedding.rs  emergency.rs  fertigation.rs  knowledge.rs  llm.rs  mod.rs  night_mode.rs  observer.rs  retrieval.rs  ventilation.rs
agri-frontend/: Cargo.toml  index.html  package-lock.json  package.json  vite.config.js
agri-frontend/src/: App.jsx  api.js  api.rs  index.css  main.rs  store.js  types.rs
agri-frontend/src/components/: ErrorBoundary.jsx  FarmScene.jsx  Icons.jsx  RegionSelector.jsx  SensorNode3D.jsx  WeatherCard.jsx  ZoneBed3D.jsx  ZoneInfoPanel.jsx  sidebar.rs
agri-frontend/src/config/: farmLayout.js
agri-frontend/src/data/: regions.js
agri-frontend/src/hooks/: useSSE.js
agri-frontend/src/pages/: AIReview.jsx  Alerts.jsx  Overview.jsx  Settings.jsx  ZoneDetail.css  ZoneDetail.jsx  alerts.rs  dashboard.rs  device_detail.rs  device_list.rs  mod.rs  rule_list.rs  settings.rs
agri-frontend/src/utils/: sensorFilter.js
agri-mqtt/: Cargo.toml
agri-mqtt/examples/: mqtt_test.rs
agri-mqtt/src/: broker.rs  client.rs  handler.rs  lib.rs
agri-server/: Cargo.toml
agri-server/src/: ai_routes.rs  areas.rs  farm_log.rs  main.rs  mqtt_ws.rs  rate_limiter.rs  request_logger.rs  response.rs  routes.rs  rule_engine.rs  state.rs  weather.rs  ws_handler.rs
agri-server/src/decision/: approval.rs  engine.rs  log.rs  mod.rs  registry.rs
agri-server/src/decision/notification/: escalator.rs  mod.rs  router.rs
agri-server/src/decision/stages/: llm_stage.rs
agri-server/src/rule_engine/: anomaly.rs  dag.rs  mod.rs  nodes.rs
agri-server/static/: index.html
agri-server/static/assets/: AIReview-FzW4IFZq.js  Alerts-CKOeqp3u.js  Alerts-DBElkE7b.js  Icons-NpQx87c0.js  Overview-D-yAH_BD.js  Overview-DID-DYu4.js  Settings-_YLVHez3.js  ZoneDetail-C7vBcquv.css  ZoneDetail-CWGfit-c.js  ZoneDetail-el3SvOqY.js  api-BJMmDKeU.js  index-3UaKV0MK.js  index-B0e6J0pz.css  index-BKdgPrZg.js  index-BZCSrW7a.js  index-BfiWLOs9.css  index-BlcSRjJO.js  index-BnVsrvLi.js  index-C1C_KdDu.css  index-CANoMt32.css  index-CCzGt2-9.js  index-CM6ZiONp.css  index-CQG7Vt_C.css  index-CdUdT97j.js  index-Cn-Sj0O8.css  index-CowAx9kX.css  index-Cs86hnuB.js  index-D09czXrE.js  index-DDqqBFeX.css  index-DO9n8cEE.js  index-DTrmm2tV.js  index-Db4dT7RJ.js  index-DjT-vVF1.css  index-Dp4yQvGn.css  index-nC4lOXE9.js  index-qomiH15Q.js  index-v4pu3gKN.js  index-zA5EoIoj.js  useSSE-ZoueVJ0H.js
agri-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
agri-ui/src/: App.tsx
agri-ui/src/components/AIAnalysisReport/: AIAnalysisReport.module.css  index.tsx
agri-ui/src/components/AISummaryPanel/: AISummaryPanel.module.css  index.tsx
agri-ui/src/components/AISystemStatus/: AISystemStatus.module.css  index.tsx
agri-ui/src/components/Charts/: LineChart.tsx
agri-ui/src/components/ComfortIndicator/: ComfortIndicator.module.css  ComfortIndicator.tsx  index.ts
agri-ui/src/components/ControlPanel/: ControlPanel.module.css  ControlPanel.tsx
agri-ui/src/components/EmergencyBanner/: EmergencyBanner.module.css
agri-ui/src/config/: metrics.ts
agri-ui/src/hooks/: useRealtimeReadings.ts
agri-ui/src/services/: api.ts  sse.ts  weather.ts  ws.ts
agri-ui/src/stores/: dashboardStore.ts  realtimeStore.ts  weatherStore.ts  zoneStore.ts
agri-ui/src/styles/: globals.css  variables.css
agri-ui/src/theme/: antdConfig.tsx  echartsTheme.ts
agri-ui/src/types/: index.ts
config/: default.toml
deploy/: build.sh  run.sh  verify.sh
esp32-firmware/: README.md  flash.sh  flash_from_ci.sh  main.ino  platformio.ini  quick_flash.sh  termux_setup.sh
esp32-firmware/keys/: .gitignore  ota_public.der
esp32-firmware/partitions/: ota_4mb.csv
esp32-firmware/src/: main.cpp  main.ino  ota_public.h
esp32-hardware/: esp32-solar-node.kicad_pro  esp32-solar-node.kicad_sch  esp32-solar-node.kicad_sym  generate_kicad.py
migrations/: 001_init.sql  002_zones.sql
scripts/: init.sh  mdns_advertise.py  ota_deploy.sh  run_bridge.sh  serial_bridge.py  setup_ssh.sh  simulate_http.py  simulate_node.py  start_mdns.sh  stress_test.py  verify_phase1.sh
(+73 files in other folders)
