[package]
name = "agri-frontend"
version.workspace = true
edition.workspace = true

[dependencies]
yew.workspace = true
yew-router.workspace = true
gloo.workspace = true
gloo-net.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
