[package]
name = "agri-server"
version.workspace = true
edition.workspace = true

[dependencies]
agri-core = { path = "../agri-core" }
agri-mqtt = { path = "../agri-mqtt" }
axum = { workspace = true, features = ["ws"] }
tower.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
rumqttc.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
reqwest.workspace = true

